--- a/.github/workflows/[A] Uppdate documentation.yml
+++ b/.github/workflows/[A] Uppdate documentation.yml
@@ -23,7 +23,7 @@
 #	AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
 #	OR OTHER DEALINGS IN THE SOFTWARE.
 #
-name: Build and release if requested
+name: Update index page
 
 on:
   push:
