--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -73,7 +73,7 @@ jobs:
           
   build-and-test-with-Java-8-and-later-with-7-target:
     name: Build and test with 7 target (${{ matrix.os }} ${{ matrix.architecture }}, JVM ${{ matrix.java }})
-    needs: [elaborate-java-hook-module]
+#    needs: [elaborate-java-hook-module]
     strategy:
       fail-fast: false
       max-parallel: 15
