--- a/java/pom.xml
+++ b/java/pom.xml
@@ -56,7 +56,7 @@
 		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
 		<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
 		<maven-surefire-plugin.version>2.21.0</maven-surefire-plugin.version>
-		<narcissus.version>1.0.3</narcissus.version>
+		<narcissus.version>1.0.4</narcissus.version>
 	</properties>
 
 	<dependencies>
@@ -93,6 +93,7 @@
 			<groupId>io.github.toolfactory</groupId>
 			<artifactId>narcissus</artifactId>
 			<version>${narcissus.version}</version>
+            <optional>true</optional>
 		</dependency>
 
 	</dependencies>
