--- a/java/pom.xml
+++ b/java/pom.xml
@@ -49,13 +49,13 @@
 		<project.test.excludes>**/*Test.java</project.test.excludes>
 
 		<junit-jupiter.version>5.8.1</junit-jupiter.version>
-		<junit.version>1.7.0</junit.version>
+		<junit.version>1.8.0</junit.version>
 		<maven-antrun-plugin.version>3.0.0</maven-antrun-plugin.version>
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
 		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
 		<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-		<maven-surefire-plugin.version>3.0.0-M1</maven-surefire-plugin.version>
+		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
 		<narcissus.version>1.0.4</narcissus.version>
 	</properties>
 
@@ -202,6 +202,7 @@
 					<includes>
 						<include>${project.test.includes}</include>
 					</includes>
+					<useModulePath>false</useModulePath>
 				</configuration>
 			</plugin>
 			<plugin>
