--- a/java/pom.xml
+++ b/java/pom.xml
@@ -139,14 +139,20 @@
 						<goals>
 							<goal>run</goal>
 						</goals>
-						<phase>
-                            compile
-                        </phase>
+							<phase>
+								compile
+							</phase>
 						<configuration>
 							<target>
-								<copy file="${project.basedir}/../java-hook/bin/java/lang/ConsulterRetrieverForJDK9.class" tofile="${project.build.directory}/classes/io/github/toolfactory/jvm/function/catalog/ConsulterRetrieverForJDK9.bwc" />
-								<copy file="${project.basedir}/../java-hook/bin/java/lang/reflect/AccessibleSetterInvokerForJDK9.class" tofile="${project.build.directory}/classes/io/github/toolfactory/jvm/function/catalog/AccessibleSetterInvokerForJDK9.bwc" />
-								<copy file="${project.basedir}/../java-hook/bin/jdk/internal/loader/ClassLoaderDelegateForJDK9.class" tofile="${project.build.directory}/classes/io/github/toolfactory/jvm/util/ClassLoaderDelegateForJDK9.bwc" />
+								<copy
+									file="${project.basedir}/../java-hook/bin/java/lang/ConsulterRetrieverForJDK9.class"
+									tofile="${project.build.directory}/classes/io/github/toolfactory/jvm/function/catalog/ConsulterRetrieverForJDK9.bwc" />
+								<copy
+									file="${project.basedir}/../java-hook/bin/java/lang/reflect/AccessibleSetterInvokerForJDK9.class"
+									tofile="${project.build.directory}/classes/io/github/toolfactory/jvm/function/catalog/AccessibleSetterInvokerForJDK9.bwc" />
+								<copy
+									file="${project.basedir}/../java-hook/bin/jdk/internal/loader/ClassLoaderDelegateForJDK9.class"
+									tofile="${project.build.directory}/classes/io/github/toolfactory/jvm/util/ClassLoaderDelegateForJDK9.bwc" />
 							</target>
 						</configuration>
 					</execution>
@@ -161,10 +167,10 @@
 						<id>default-compile</id>
 						<configuration>
 							<!-- compile everything to ensure module-info contains right entries -->
-							<release>8</release>
-							<excludes>
+							<release>9</release>
+						<!--<excludes>
 								<exclude>module-info.java</exclude>
-							</excludes>
+							</excludes>-->
 						</configuration>
 					</execution>
 					<execution>
