--- a/java/pom.xml
+++ b/java/pom.xml
@@ -107,6 +107,13 @@
 				<targetPath>META-INF</targetPath>
 			</resource>
 			<resource>
+				<directory>${project.build.directory}/classes/</directory>
+				<includes>
+					<include>module-info.class</include>
+				</includes>
+				<targetPath>META-INF/versions/9</targetPath>
+			</resource>
+			<resource>
 				<directory>${project.basedir}/src/main/resources</directory>
 				<includes>
 					<include>**</include>
@@ -156,6 +163,20 @@
 							</target>
 						</configuration>
 					</execution>
+					<execution>
+                        <id>add-module-info-to-jar</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <jar update="true" destfile="${project.build.directory}/${project.build.finalName}.jar">
+                                    <zipfileset prefix="META-INF/versions/9" dir="${project.build.directory}/classes" includes="module-info.class" />
+                                </jar>
+                            </target>
+                        </configuration>
+                    </execution>
 				</executions>
 			</plugin>
 			<plugin>
@@ -219,12 +240,10 @@
 				<version>${maven-jar-plugin.version}</version>
 				<configuration>
 					<excludes>
+						<exclude>module-info.class</exclude>
 						<exclude>jdk/</exclude>
 						<exclude>java/</exclude>
 						<exclude>META-INF/maven/</exclude>
-						<exclude>**/*.c</exclude>
-						<exclude>**/*.cpp</exclude>
-						<exclude>**/*.h</exclude>
 					</excludes>
 					<archive>
 						<addMavenDescriptor>false</addMavenDescriptor>
