Added dynamic driver

--- a/java/src/main/resources/jvm-driver.properties
+++ b/java/src/main/resources/jvm-driver.properties
@@ -27,4 +27,5 @@
 priority-of-this-configuration-file=0
 default-driver.class=io.github.toolfactory.jvm.DefaultDriver
 hybrid-driver.class=io.github.toolfactory.jvm.HybridDriver
+dynamic-driver.class=io.github.toolfactory.jvm.DynamicDriver
 native-driver.class=io.github.toolfactory.jvm.NativeDriver
