Improved property names

--- a/java/src/main/resources/jvm-driver.properties
+++ b/java/src/main/resources/jvm-driver.properties
@@ -25,7 +25,7 @@
 #  OR OTHER DEALINGS IN THE SOFTWARE.
 #  
 priority-of-this-configuration-file=0
-default-driver.class=io.github.toolfactory.jvm.DefaultDriver
-hybrid-driver.class=io.github.toolfactory.jvm.HybridDriver
-dynamic-driver.class=io.github.toolfactory.jvm.DynamicDriver
-native-driver.class=io.github.toolfactory.jvm.NativeDriver
+driver-factory.default-driver.class=io.github.toolfactory.jvm.DefaultDriver
+driver-factory.hybrid-driver.class=io.github.toolfactory.jvm.HybridDriver
+driver-factory.dynamic-driver.class=io.github.toolfactory.jvm.DynamicDriver
+driver-factory.native-driver.class=io.github.toolfactory.jvm.NativeDriver
