--- a/java/pom.xml
+++ b/java/pom.xml
@@ -187,11 +187,12 @@
 						<configuration>
 							<!-- compile everything to ensure module-info contains right entries -->
 							<release>9</release>
-							<!-- IMPORTANT: to test locally unconment this
-								<excludes>
-									<exclude>module-info.java</exclude>
-								</excludes>
-							 -->
+							<!-- IMPORTANT: to run locally the tests in the package io.github.toolfactory.jvm.test unconment the lines below -->
+							<!--
+							<excludes>
+								<exclude>module-info.java</exclude>
+							</excludes>
+							-->
 						</configuration>
 					</execution>
 					<execution>
