--- a/java/pom.xml
+++ b/java/pom.xml
@@ -29,7 +29,7 @@
 
 	<groupId>io.github.toolfactory</groupId>
 	<artifactId>jvm-driver</artifactId>
-	<version>8.7.3</version>
+	<version>8.7.4-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 
@@ -127,7 +127,7 @@
 		<connection>scm:git:${repository.url}</connection>
 		<developerConnection>scm:git:${repository.url}</developerConnection>
 		<url>https://github.com/toolfactory/jvm-driver</url>
-		<tag>jvm-driver-8.7.3</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<dependencies>
