--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -57,6 +57,7 @@ jobs:
         uses: actions/setup-java@v2.4.0
         with:
           java-version: ${{ matrix.java }}
+          distribution: 'zulu'
           architecture: ${{ matrix.architecture }}
       - if: startsWith(matrix.os, 'ubuntu') || startsWith(matrix.os, 'macOS')
         name: Change the permissions of the build script of external classes
@@ -97,6 +98,7 @@ jobs:
         uses: actions/setup-java@v2.4.0
         with:
           java-version: ${{ matrix.java }}
+          distribution: 'zulu'
           architecture: ${{ matrix.architecture }}
       - name: Update repositories
         run: |
@@ -117,6 +119,7 @@ jobs:
         uses: actions/setup-java@v2.4.0
         with:
           java-version: 15
+          distribution: 'zulu'
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
