Releasing new version

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -82,6 +82,13 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.junit.platform</groupId>
+		    <artifactId>junit-platform-launcher</artifactId>
+		    <version>${junit.version}</version>
+		    <scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.junit.platform</groupId>
