--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -128,6 +128,8 @@ jobs:
           - distribution: adopt
             java: 19-ea
           - distribution: temurin
+            architecture: x86
+          - distribution: temurin
             java: 9
           - distribution: temurin
             java: 10
