--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -35,7 +35,7 @@ on:
       - "**.sh"
       - "**.cmd"
       - "**.java"
-      - ".github/workflows/**"
+#      - ".github/workflows/**"
       - "**.properties"
       - "**.xml"
 
@@ -147,3 +147,43 @@ jobs:
           git pull origin ${{github.ref}}  
       - name: Build and test with Java 7 target
         run: mvn -B clean test -DskipTests=false --file ./java/pom.xml
+
+  
+  release:
+    needs: [build-and-test-with-standard-JDK, build-and-test-with-others-JDK]
+    name: Release if requested
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && endsWith(github.event.head_commit.message, 'Releasing new version')
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 15
+        uses: actions/setup-java@v2.4.0
+        with:
+          java-version: 15
+          distribution: 'zulu'
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
+      - name: Publish to the Maven central repository
+        run: |
+          export GPG_TTY=$(tty)
+          echo "${{ secrets.gpg_private_key }}" | gpg --batch --import
+          git config user.name "${{ github.event.head_commit.committer.name }}"
+          git config user.email "${{ github.event.head_commit.committer.email }}"
+          git pull origin ${{github.ref}}
+          mv ./java/pom.xml ./java/temp-pom.xml
+          mv ./java/sa-pom.xml ./java/pom.xml
+          mv ./java/temp-pom.xml ./java/sa-pom.xml
+          git commit -am "Swithcing pom for releasing"
+          git push          
+          mvn -B release:prepare release:perform -DskipTests=true -Dgpg.passphrase="${{ secrets.gpg_passphrase }}" -Dgpg.keyname=${{ secrets.gpg_key_id }} -Drepository.url=https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git --file ./java/pom.xml
+          mv ./java/pom.xml ./java/temp-pom.xml
+          mv ./java/sa-pom.xml ./java/pom.xml
+          mv ./java/temp-pom.xml ./java/sa-pom.xml
+          newVersion=$(sed -n -r 's%.*<version>[[:space:]]*(.*-SNAPSHOT)</version>.*%\1%p' ./java/sa-pom.xml)
+          sed -r -i "s%<version>[[:space:]]*(.*-SNAPSHOT)</version>%<version>${newVersion}</version>%" ./java/pom.xml
+          git commit -am "Prepare for next development iteration"
+          git push    
+        env:
+          MAVEN_USERNAME: ${{ secrets.nexus_username }}
+          MAVEN_PASSWORD: ${{ secrets.nexus_password }}
